<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_electronico">

    <fragment
        android:id="@+id/nav_electronico"
        android:name="com.electronicos.ui.electronico.ElectronicoFragment"
        android:label="@string/menu_electronico"
        tools:layout="@layout/fragment_electronico" >
        <action
            android:id="@+id/action_nav_electronico_to_addElectronicoFragment"
            app:destination="@id/addElectronicoFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.electronicos.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.electronicos.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addElectronicoFragment"
        android:name="com.electronicos.ui.electronico.AddElectronicoFragment"
        android:label="fragment_add_electronico"
        tools:layout="@layout/fragment_add_electronico" >
        <action
            android:id="@+id/action_addElectronicoFragment_to_nav_electronico"
            app:destination="@id/nav_electronico" />
    </fragment>
</navigation>